ubuntu-release-upgrader (1:16.04.1) UNRELEASED; urgency=medium

  [ Barry Warsaw ]
  * Don't try to import janitor and NvidiaDetector in a package relative
    to this one, to avoid the possibility of dangling symlinks when the
    packages actually containing these modules is not installed.
    (LP: #1485093)
  * debian/python3-distupgrade.links: Removed.

 -- Brian Murray <brian@ubuntu.com>  Fri, 23 Oct 2015 13:25:32 -0700

ubuntu-release-upgrader (1:15.10.14) wily; urgency=medium

  [ Brian Murray ]
  * data/DistUpgrade.cfg: Update kernel version and types that will be
    considered for removal. (LP: #1508539)

  [ Martin Pitt ]
  * DistUpgrade/imported/invoke-rc.d: Import current version with systemd
    support, to fix upgrade failures of packages which only ship upstart and
    systemd units, but no SysV init script (like lxc, ofono, or nfs-common).
    (LP: #1504897)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 21 Oct 2015 23:40:22 +0200

ubuntu-release-upgrader (1:15.10.13) wily; urgency=medium

  * Revert change from 15.10.11, already rejected from wily-proposed

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 20 Oct 2015 16:56:06 +0100

ubuntu-release-upgrader (1:15.10.12) wily; urgency=medium

  * Remove kmix as part of Kubuntu upgrade, now plasma-pa is volume applet

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 20 Oct 2015 16:34:56 +0100

ubuntu-release-upgrader (1:15.10.11) wily; urgency=medium

  * Change KDE fetcher UI from showing the HTML release notes to showing the
    text notes. HTML notes apparently come back with 403 when fetched through
    urllib...
    Since we have no tested WebView code at hand to prefer over the text notes
    we'll have to settle for text even though we could render HTML just fine.
    This fixes the fetcher constantly coming up with a fatal error dialog due
    to handling the 403 exception.
    LP: #1507887

 -- Harald Sitter <sitter@kde.org>  Tue, 20 Oct 2015 07:45:13 +0200
