@@ -1,4 +1,4 @@
-= Welcome to the Ubuntu 'Wily Werewolf' development release =
+= Welcome to the Ubuntu 'Xenial Xerus' development release =
 
 ''This release is still in development.''
 ''Do not install it on production machines.''
