@@ -1,4 +1,4 @@
-= Ubuntu 15.10 'Wily Werewolf' is no longer supported =
+= Ubuntu 16.04 'Xenial Xerus' is no longer supported =
 
 You are about to upgrade to a version of Ubuntu that is no longer
 supported.
