@@ -1,6 +1,6 @@
-= Welcome to Ubuntu 15.10 'Wily Werewolf' =
+= Welcome to Ubuntu 16.04 'Xenial Xerus' =
 
-The Ubuntu team is proud to announce Ubuntu 15.10 'Wily Werewolf'.
+The Ubuntu team is proud to announce Ubuntu 16.04 'Xenial Xerus'.
 
 To see what's new in this release, visit:
   http://www.ubuntu.com/desktop/features
