@@ -236,7 +236,7 @@
    <item row="0" column="0" colspan="4">
     <widget class="QLabel" name="label_title">
      <property name="text">
-      <string>&lt;b&gt;&lt;big&gt;Upgrading Ubuntu to version 15.10&lt;/big&gt;&lt;/b&gt;</string>
+      <string>&lt;b&gt;&lt;big&gt;Upgrading Ubuntu to version 16.04&lt;/big&gt;&lt;/b&gt;</string>
      </property>
      <property name="wordWrap">
       <bool>false</bool>
