@@ -39,7 +39,7 @@ EnableApport=yes
 #SlideshowUrl=http://people.canonical.com/~mvo/ubiquity-slideshow-upgrade/slides/
 
 [KernelRemoval]
-Version=4.2.0
+Version=3.13.0
 BaseNames=linux-image,linux-headers,linux-image-debug,linux-backport-modules,
   linux-header-lbm,linux-signed-image,linux-tools,linux-cloud-tools,
   linux-image-extra
@@ -110,7 +110,7 @@ BackupExt=distUpgrade
 LogDir=/var/log/dist-upgrade/
 
 [Sources]
-From=wily
+From=trusty
 To=xenial
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
