@@ -1155,7 +1155,7 @@ Please save your work before continuing.</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="xalign">0</property>
-                <property name="label" translatable="yes">&lt;b&gt;&lt;big&gt;Upgrading Ubuntu to version 15.10&lt;/big&gt;&lt;/b&gt;</property>
+                <property name="label" translatable="yes">&lt;b&gt;&lt;big&gt;Upgrading Ubuntu to version 16.04&lt;/big&gt;&lt;/b&gt;</property>
                 <property name="use_markup">True</property>
               </object>
               <packing>
