@@ -7,6 +7,15 @@ ubuntu-release-upgrader (1:16.04.1) UNRELEASED; urgency=medium
     (LP: #1485093)
   * debian/python3-distupgrade.links: Removed.
 
+  [ Brian Murray ]
+  * DistUpgrade/{EOL,}ReleaseAnnouncement,
+    DistUpgrade/DistUpgrade/window_main.ui,
+    data/gtkbuilder/DistUpgrade.ui,
+    data/DistUpgrade.cfg,
+    data/DistUpgrade.cfg.trusty,
+    pre-build.sh:
+    - updated for 15.10>16.04
+
  -- Brian Murray <brian@ubuntu.com>  Fri, 23 Oct 2015 13:25:32 -0700
 
 ubuntu-release-upgrader (1:15.10.14) wily; urgency=medium
